--- a/index.html
+++ b/index.html
@@ -6,15 +6,27 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Cumo</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="icon" href="./images/cat.png">
 	<script src="./js/main.js"></script>
 </head>
 
 <body>
-	<div>hello world!!!!!</div>
-	<img src="./images/logo.png" alt="logo"/>
-	<img src="https://heropy.blog/css/images/logo.png" alt="logo"/>
+	<div class="orangebox"></div>
+	<a href="http://naver.com">NAVER</a>
+	<a href="/about">About</a>
+	<a href="/login">Login</a>
+	<div class="logo"></div>
+	<div>
+		<ul>
+			<li>1</li>
+			<li>2</li>
+			<li>3</li>
+			<li>4</li>
+			<li>5</li>
+		</ul>
+	</div>
 </body>
 
 </html>
